--- a/html_and_css/static/html_and_css.css
+++ b/html_and_css/static/html_and_css.css
@@ -9,7 +9,7 @@ body {
     min-width: 100%;
     min-height: 100%;
     width: auto;
-    height: 100vh;
+    height: auto;
     z-index: -20;
 
     /* mix-blend-mode: hard-light; */
