--- a/html_and_css/static/html_and_css.css
+++ b/html_and_css/static/html_and_css.css
@@ -5,12 +5,12 @@
 
 body {
     background-image: url("./w95_vpwave.jpg");
-    background-repeat: repeat-y;
+    background-repeat: no-repeat;
     background-size: cover;
     min-width: 100%;
-    min-height: 100%;
-    width: auto;
-    height: auto;
+    min-height: 100vh;
+    width: 100%;
+    height: 100%;
     z-index: -20;
 
     /* mix-blend-mode: hard-light; */
