--- a/web_api/static/web_api.css
+++ b/web_api/static/web_api.css
@@ -52,6 +52,7 @@ img {
     clip-path: circle(30%);
     z-index: 10;
     position: absolute;
-    max-width:  50vw;
-    max-height: 50vw;
+    max-width:  60vw;
+    max-height: 60vw;
+    opacity: 0;
 }
