--- a/web_api/static/web_api.css
+++ b/web_api/static/web_api.css
@@ -7,6 +7,16 @@ body {
 }
 
 
+@font-face {
+    font-family: 'Ubuntu Mono';
+    font-style: normal;
+    font-weight: 400;
+    src: url(https://fonts.gstatic.com/s/ubuntumono/v14/KFOjCneDtsqEr0keqCMhbCc6CsTYl4BO.woff2) format('woff2');
+    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+  
+
+
 .title {
     height: 15vh;
     font-size: 3vw;
@@ -18,14 +28,16 @@ body {
     /* margin: 1vh 0 1vh 0; */
     /* padding: 3vw; */
     background-color: aliceblue;
+    font-family: 'Ubuntu Mono';
     
 }
 
 .introduction {
     min-height: 75vh;
-    font-size: 1.5vw;
+    font-size: 1.4vw;
     padding: 5vh;
     flex: 2;
+    font-family: 'Ubuntu Mono';
 }
 
 a {
