--- a/final_project/static/stylesheet/drawing_busy.css
+++ b/final_project/static/stylesheet/drawing_busy.css
@@ -1,6 +1,9 @@
 html, body {
     margin:0;
     height:100%;
+    max-width: 100%;
+    max-height: 100%;
+    overflow: hidden; 
     padding: 0;
     background-color: gray;
 }
@@ -20,4 +23,15 @@ html, body {
     50% {transform: rotate(0deg);}
     75% {transform: rotate(-20deg);}
     100% {transform: rotate(0deg);}
+}
+
+.type1 {
+    animation: bling1 2s linear;
+    animation-iteration-count: infinite;
+}
+
+@keyframes bling1 {
+    0% {opacity: 1;}
+    50% {opacity: 0;}
+    100% {opacity: 1;}
 }
