--- a/final_project/static/stylesheet/drawing_hide.css
+++ b/final_project/static/stylesheet/drawing_hide.css
@@ -2,14 +2,67 @@ html, body {
     margin:0;
     height:100%;
     padding: 0;
-    background-color: gray;
+    background-color: white;
 }
 
+svg {
+    shape-rendering: optimizeSpeed;
+}
 
+body {
+    overflow: hidden;
+  }
+
+#building1 {
+    /* transform: scale(1.3); */
+    position: absolute;
+    top: 8vh;
+    left: 2vw;
+    width:160vw;
+    /* height: 2200px; */
+    /* height: 130vh; */
+    /* z-index: -1; */
+}
+#building2 {
+    /* transform: scale(1.3); */
+    position: absolute;
+    top: 48vh;
+    left: -13vw;
+    width:100vw;
+    /* height: 1800px; */
+    /* z-index: -1; */
+}
+#building3 {
+    /* transform: scale(1.3); */
+    position: absolute;
+    left: 75vw;
+    top: 20vh;
+    width:60vw;
+    /* height: 130vh; */
+    /* z-index: -1; */
+}
+#road{
+    position: absolute;
+    transform: rotate(132deg);
+    width:100vw;
+    left:-5vw;
+    top:-60vh;
+}
+#ship{
+    transform: rotate(312deg);
+    /* animation: swing 3.5s linear; */
+    position: absolute;
+    left:87vw;
+    top: -30vh;
+    width:45vw;
+}
+.svgs{
+    width:100%;
+}
 #ghost {
     position: absolute;
-    width: 15vw;
-    height: 15vh;
+    width: 35vw;
+    height: 35vh;
     animation: swing 2s linear;
     animation-iteration-count: infinite;
 }
@@ -21,3 +74,10 @@ html, body {
     75% {transform: rotate(-20deg);}
     100% {transform: rotate(0deg); opacity: 1;}
 }
+/* @keyframes shipping {
+    0% {transform-origin: 0,0;}
+    25% {transform-origin: 1500,3000;}
+    50% {transform-origin: 30,60;}
+    75% {transform-origin: 1500,3000;}
+    100% {transform-origin: 0,0;}
+} */
