--- a/final_project/static/stylesheet/drawing_hide.css
+++ b/final_project/static/stylesheet/drawing_hide.css
@@ -5,14 +5,15 @@ html, body {
     background-color: white;
 }
 
-svg {
-    shape-rendering: optimizeSpeed;
-}
-
 body {
     overflow: hidden;
   }
-
+.wrapper {
+display: grid;
+/* grid-template-columns: repeat(3, 1fr);
+grid-gap: 10px;
+grid-auto-rows: minmax(100px, auto); */
+}
 #building1 {
     /* transform: scale(1.3); */
     position: absolute;
@@ -50,21 +51,20 @@ body {
 }
 #ship{
     transform: rotate(312deg);
-    /* animation: swing 3.5s linear; */
     position: absolute;
     left:87vw;
     top: -30vh;
     width:45vw;
 }
-.svgs{
+/* .svgs{
     width:100%;
-}
+} */
 #ghost {
     position: absolute;
-    width: 35vw;
     height: 35vh;
     animation: swing 2s linear;
     animation-iteration-count: infinite;
+    z-index: 10;
 }
 
 @keyframes swing {
@@ -74,10 +74,10 @@ body {
     75% {transform: rotate(-20deg);}
     100% {transform: rotate(0deg); opacity: 1;}
 }
-/* @keyframes shipping {
-    0% {transform-origin: 0,0;}
-    25% {transform-origin: 1500,3000;}
-    50% {transform-origin: 30,60;}
-    75% {transform-origin: 1500,3000;}
-    100% {transform-origin: 0,0;}
-} */
+
+svg {
+    shape-rendering: optimizeSpeed;
+    image-rendering: optimizeSpeed;
+    text-rendering: optimizeSpeed;
+  }
+  
