--- a/final_project/static/stylesheet/drawing_hide.css
+++ b/final_project/static/stylesheet/drawing_hide.css
@@ -8,60 +8,135 @@ html, body {
 body {
     overflow: hidden;
   }
+  /* svg, img {
+  shape-rendering: optimizeSpeed;
+  image-rendering: optimizeSpeed;
+  text-rendering: optimizeSpeed;
+} */
+
 .wrapper {
-display: grid;
-/* grid-template-columns: repeat(3, 1fr);
-grid-gap: 10px;
-grid-auto-rows: minmax(100px, auto); */
+    width: 100%;
+    height: 100%;
+    display: grid;
+    grid-template-columns: repeat(8, 12.5%);
+    grid-template-rows: repeat(8, 12.5%);
+    /* grid-auto-rows: minmax(100px, auto); */
+    column-gap: 10px;
+    row-gap: 1em;
+    
 }
-#building1 {
-    /* transform: scale(1.3); */
+.part1{
+    grid-column: 3 / 6;
+    grid-row: 1 / 5;
+    width: auto;
+}
+#building1{
+    grid-column: 3 / 6;
+    grid-row: 1 / 5;
+    width: auto;
+}
+.part2{
+    grid-column: 1 / 6;
+    grid-row: 5 / 7;
+    width: auto;
+}
+#building2{
+    grid-column: 1 / 6;
+    grid-row: 5 / 7;
+    width: auto;
+}
+.part3{
+    grid-column: 4/ 7;
+    grid-row: 5 / 9;
+    width: auto;
+}
+#building3{
+    grid-column: 4/ 7;
+    grid-row: 5 / 9;
+    width: auto;
+}
+.part4{
+    grid-column: 1/ 5;
+    grid-row: 2 / 5;
+    width: auto;
+}
+#tree1{
+    grid-column: 1/ 5;
+    grid-row: 2 / 5;
+    width: auto;
+}
+.part5{
+    grid-column: 2/ 5;
+    grid-row: 2 / 5;
+    width: auto;
+}
+#tree2{
+    grid-column: 2/ 5;
+    grid-row: 2 / 5;
+    width: auto;
+}
+.part6{
+    grid-column:5/ 9;
+    grid-row: 1 / 9;
+}
+
+#road{
+    transform: scale(1.2);
+    grid-column:5/ 9;
+    grid-row: 1 / 9;
+    width: auto;
+    /* resize: vertical; */
+    height: 100vh;
+}
+#ship{
+    position: absolute;
+    left: 70vw;
+    width:19vw;
+}
+/* #road{
+    grid-column: 1 / 9;
+    grid-row: 4/ 5;
+} */
+
+/* #building1 {
     position: absolute;
     top: 8vh;
     left: 2vw;
     width:160vw;
-    /* height: 2200px; */
-    /* height: 130vh; */
-    /* z-index: -1; */
 }
 #building2 {
-    /* transform: scale(1.3); */
     position: absolute;
     top: 48vh;
     left: -13vw;
     width:100vw;
-    /* height: 1800px; */
-    /* z-index: -1; */
 }
 #building3 {
-    /* transform: scale(1.3); */
     position: absolute;
     left: 75vw;
     top: 20vh;
     width:60vw;
-    /* height: 130vh; */
-    /* z-index: -1; */
-}
-#road{
+} */
+/* #road{
     position: absolute;
     transform: rotate(132deg);
     width:100vw;
     left:-5vw;
     top:-60vh;
-}
-#ship{
+} */
+/* #ship{
     transform: rotate(312deg);
     position: absolute;
     left:87vw;
     top: -30vh;
     width:45vw;
-}
+} */
 /* .svgs{
     width:100%;
 } */
 #ghost {
     position: absolute;
-    height: 35vh;
+    /* width:50vw; */
+    height: 40vh;
     animation: swing 2s linear;
     animation-iteration-count: infinite;
     z-index: 10;
